# robot-buddy-python

./: setup.sh  setup_local.sh
go2_control/: cmd_vel_node.py  go2w_read.py  init_pose.py  main.py  main2.py
launch/: mapping.launch.py  navigation2.launch.py  real.launch.py  sim.launch.py
map/: house_map.pgm  house_map.yaml
src/go2_control/: nav2_params.yaml  nav2_params_go2w.yaml  nav2go2_params.yaml  package.xml  pc2scan.yaml  pc2scan_sim.yaml  setup.py
src/go2_control/config/: april_localizer.yaml  real.yaml  sim.yaml
src/go2_control/go2_control/: Stream.py  april_localizer.py  april_localizerold.py  camera.py  cmd_vel_node.py  fake_robot.py  gazebo_convert.py  go2w_read.py  main.py  mainNoOdon.py  mqtt.py  send_goal.py  testC.py  waypoint_gen.py
src/go2_control/launch/: go2.launch.py  real.launch.py  sim.launch.py
src/go2_control/src/: cmd_vel_node.cpp
src/go2_control/urdf/: robot.urdf
src/go2_interfaces/: CMakeLists.txt  package.xml
src/unitree_example/: CMakeLists.txt
src/unitree_example/src/go2/: go2w_control.cpp  go2w_messager.cpp
